--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "pinia": "^2.0.14",
     "socket.io-client": "^4.5.1",
-    "vue": "^3.2.37",
-    "pinia": "^2.0.14"
+    "vue": "^3.2.37"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
