--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "roboto-fontface": "*",
     "socket.io-client": "^4.5.1",
     "vue": "^3.2.37",
+    "vue-i18n": "^9.2.2",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
