Add lint into CI

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,8 +30,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: make init
     - run: make build
+    - run: npm run lint 
     # - run: npm run test:prod
-    # - run: npm run lint 
 
     # - name: Coveralls
     #   uses: coverallsapp/github-action@master
